# NeuraBSD

./: .editorconfig  .gitignore  CODE_STANDARDS.md  CONTACT.md  CoreSeed.pro  LICENSE  README.md  TRADEMARK.md  fix_tabs.py  sync_check.sh
CoreSeed/: .gitignore  CMakeLists.txt  CoreSeed  CoreSeed.pro  Doxyfile  coreseed  index.html  resources.qrc
CoreSeed/documentation/html/: CoreSeed_8cpp.html  CoreSeed_8hpp.html  CoreSeed_8hpp.js  CoreSeed_8hpp_source.html  DiagnosticPage_8cpp.html  DiagnosticPage_8hpp.html  DiagnosticPage_8hpp.js  DiagnosticPage_8hpp_source.html  HardwareScanner_8cpp.html  HardwareScanner_8hpp.html  HardwareScanner_8hpp.js  HardwareScanner_8hpp_source.html  InstallerPage_8hpp.html  InstallerPage_8hpp.js  InstallerPage_8hpp_source.html  PartitionPage_8cpp.html  PartitionPage_8hpp.html  PartitionPage_8hpp.js  PartitionPage_8hpp_source.html  SysExecutor_8cpp.html  SysExecutor_8hpp.html  SysExecutor_8hpp.js  SysExecutor_8hpp_source.html  TerminalPage_8cpp.html  TerminalPage_8hpp.html  TerminalPage_8hpp.js  TerminalPage_8hpp_source.html  annotated.html  annotated_dup.js  classCoreSeed-members.html  classCoreSeed.html  classCoreSeed.js  classDiagnosticPage-members.html  classDiagnosticPage.html  classDiagnosticPage.js  classHardwareScanner-members.html  classHardwareScanner.html  classHardwareScanner.js  classInstallerPage-members.html  classInstallerPage.html  (+31 more)
CoreSeed/src/: CoreSeed.cpp  CoreSeed.hpp  coreseed  main.cpp  neurabsd_test.qcow2
CoreSeed/src/core/: HardwareScanner.cpp  HardwareScanner.hpp  SysExecutor.cpp  SysExecutor.hpp
(+328 files in other folders)
